// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatCard > should render with hero variant 1`] = `
<div>
  <div
    class="card card--default rounded-3xl shadow-md p-6"
    data-slot="card"
  >
    <div
      class="card__header flex flex-col items-start gap-2"
      data-slot="card-header"
    >
      <h4
        class="scroll-m-20 font-medium text-default-900 text-xl tracking-tight"
      >
        Test Title
      </h4>
      <p
        class="text-default-600 text-sm leading-6"
      >
        Test Description
      </p>
    </div>
    <div
      class="card__content flex-1"
      data-slot="card-content"
    >
      <div
        data-testid="bar-chart"
      >
        <div>
          Petrol
          : 
          1000
        </div>
        <div>
          Electric
          : 
          500
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatCard > should render with required props 1`] = `
<div>
  <div
    class="card card--default rounded-2xl p-3"
    data-slot="card"
  >
    <div
      class="card__header flex flex-col items-start gap-2"
      data-slot="card-header"
    >
      <h4
        class="scroll-m-20 font-medium text-default-900 text-xl tracking-tight"
      >
        Test Title
      </h4>
      <p
        class="text-default-600 text-sm leading-6"
      >
        Test Description
      </p>
    </div>
    <div
      class="card__content flex-1"
      data-slot="card-content"
    >
      <div
        data-testid="bar-chart"
      >
        <div>
          Petrol
          : 
          1000
        </div>
        <div>
          Electric
          : 
          500
        </div>
      </div>
    </div>
  </div>
</div>
`;
